fix : not clickable book in homepage and change some navigation after delete or add book to library

--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryPage.xaml
@@ -64,7 +64,7 @@
                                                     IsClippedToBounds="True"
                                                     Padding="0,15,0,0">
                                                 <Rectangle Fill="#7db051"
-                                                       WidthRequest="{Binding progressBar}"
+                                                       WidthRequest="{Binding progressBar, Mode=TwoWay}"
                                                        HeightRequest="10"
                                                        HorizontalOptions="Start" 
                                                        />
