feat : add greeting text to user

--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/NewArrivalBooksPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/NewArrivalBooksPage.xaml
@@ -1,38 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:ENSIKLO.ViewModels" xmlns:model="clr-namespace:ENSIKLO.Models"
-             x:Class="ENSIKLO.Views.NewArrivalBooksPage">
+             x:Class="ENSIKLO.Views.NewArrivalBooksPage"
+             BackgroundColor="WhiteSmoke">
     <ContentPage.Content>
+      
         <ScrollView Orientation="Vertical">
+            <StackLayout
+                Margin="10"
+                HeightRequest="200">
 
-            <StackLayout BackgroundColor="WhiteSmoke">
+                <Label Text="New Arrival Books" TextColor="#009BF0" Margin="15" FontSize="20" FontAttributes="Bold"/>
 
-                
-                <Label Text="All New Arrival Books" FontAttributes="Bold" FontSize="17" TextColor="Black" Margin="15,10,0,0"/>
-                <RefreshView x:DataType="local:NewArrivalViewModel"   IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
-                        <CollectionView 
-                            ItemsSource="{Binding BooksNewArrival}" 
-                            x:Name="ItemsListView" 
-                            SelectionMode="Single"
-                            HeightRequest="100"
-                            SelectedItem="{Binding SelectedBook}"
-                            Margin="10"
-                            >
-                            <CollectionView.EmptyView>
+                <RefreshView x:DataType="local:NewArrivalViewModel" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
 
-                                <StackLayout>
-                                    <Label Text="No data Available" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"></Label>
-                                </StackLayout>
+                    <CollectionView 
+                                ItemsSource="{Binding BooksNewArrival}" 
+                                Margin="10"
+                                x:Name="ItemsListViewBottom" 
+                                SelectionMode="Single"
+                                SelectedItem="{Binding SelectedBook}"
+                                EmptyView="No data Available"
+                                >
+                        
 
+                        <CollectionView.ItemsLayout>
+                            <GridItemsLayout Orientation="Vertical" Span="8" HorizontalItemSpacing="6" VerticalItemSpacing="6"/>
+                        </CollectionView.ItemsLayout>
 
-                            </CollectionView.EmptyView>
-                            <CollectionView.ItemsLayout>
-                                <GridItemsLayout Orientation="Vertical" Span="6" HorizontalItemSpacing="4" VerticalItemSpacing="4"/>
-                            </CollectionView.ItemsLayout>
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                
 
-                            <CollectionView.ItemTemplate>
-                                <DataTemplate>
-                                    <Frame CornerRadius="12" 
+                                <Frame CornerRadius="12" 
                                            HorizontalOptions="Center" 
                                            VerticalOptions="Start"
                                            HasShadow="True"
@@ -40,61 +40,54 @@
                                            BorderColor="Gray"         
                                            IsClippedToBounds="True"
                                            Padding="0">
-                                        <Grid Padding="8" Margin="4" x:DataType="model:Book" BackgroundColor="White">
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="3*" />
 
-                                                <RowDefinition Height="1*" />
-                                            </Grid.RowDefinitions>
+                                    <Grid x:DataType="model:Book" >
 
-                                            <Image Source="{Binding Url_cover}"
-                                                       Grid.Row="0"
-                                                       Aspect="AspectFit" 
-                                                       WidthRequest="30"
-                                                       HeightRequest="100"
-                                                       />
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="1*" />
+                                            <RowDefinition Height=".6*" />
+                                        </Grid.RowDefinitions>
 
 
-                                            <StackLayout Grid.Row="1">
-                                                <Label Grid.Column="1"
-                                                           VerticalOptions="Center"
-                                                           Text="{Binding Title}"
-                                                           FontAttributes="Bold"
-                                                           TextColor="Black"    
+                                        <Image Source="{Binding Url_cover}"
+                                                           Grid.Row="0"
+                                                           Aspect="AspectFill" 
+                                                           WidthRequest="100"
+                                                           HeightRequest="100"
                                                            />
 
 
+                                        <StackLayout Grid.Row="1">
 
-                                                <Label Text="{Binding Author}"
-                                                            Grid.Row="1"
-                                                            Grid.Column="1"
-                                                            VerticalOptions="Start"
-                                                            FontAttributes="Italic"
-                                                            TextColor="Black"
-                                                            />
+                                            <Label Grid.Column="1"
+                                                       HorizontalOptions="CenterAndExpand"
+                                                       TextColor="Black"
+                                                       Text="{Binding Title}"
+                                                       FontAttributes="Bold"
+                                                      />
 
 
+                                            <Label Text="{Binding Author}"
+                                                        Grid.Row="1"
+                                                        Grid.Column="1"
+                                                        HorizontalOptions="CenterAndExpand"
+                                                        TextColor="Black"
+                                                        FontAttributes="Italic"
+                                                        />
+                                        </StackLayout>
 
-                                                <StackLayout.GestureRecognizers>
-                                                    <TapGestureRecognizer 
-                                                    NumberOfTapsRequired="1"
-                                                    Command="{Binding Source={RelativeSource AncestorType={x:Type local:BookViewModel}}, Path=BookTapped}"		
-                                                    CommandParameter="{Binding .}">
-                                                    </TapGestureRecognizer>
-                                                </StackLayout.GestureRecognizers>
+                                    </Grid>
 
-                                            </StackLayout>
 
-                                        </Grid>
-                                    </Frame>
+                                </Frame>
 
-                                </DataTemplate>
-                            </CollectionView.ItemTemplate>
-                        </CollectionView>
+                            </DataTemplate>
 
-                    </RefreshView>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </RefreshView>
+            </StackLayout>
 
-                </StackLayout>
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
