--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/BooksPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/BooksPage.xaml
@@ -10,8 +10,14 @@
         <ScrollView Orientation="Vertical">
 
         <StackLayout BackgroundColor="WhiteSmoke">
-            
-            <Label Text="Have you read a book today?" TextColor="#009BF0" Margin="15" FontSize="20"/>
+
+                <StackLayout Orientation="Horizontal">
+                    <Label Text="Hello, " TextColor="#009BF0" Margin="15,10,0,0" FontSize="20" FontAttributes="Bold"/>
+                    <Label Text="{Binding Username}" TextColor="#009BF0" Margin="0,10,0,0" FontSize="20" FontAttributes="Bold" VerticalOptions="Start"/>
+                </StackLayout>
+                
+
+                <Label Text="Have you read a book today?" TextColor="#009BF0" Margin="15,0" FontSize="20" FontAttributes="Bold"/>
             <Frame CornerRadius="20" 
                        HorizontalOptions="Center" 
                        VerticalOptions="Start"
