--- a/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryPage.xaml
+++ b/ENSIKLO/ENSIKLO/ENSIKLO/Views/LibraryPage.xaml
@@ -10,6 +10,38 @@
         <ScrollView Orientation="Vertical">
 
             <StackLayout BackgroundColor="WhiteSmoke">
+
+                <StackLayout Orientation="Horizontal">
+                    <!--<Label Text="Sort by Title" TextColor="#009BF0" Margin="15,10,0,0" FontSize="20" FontAttributes="Bold"/>
+                    <Label Text="Sort by Last Read" TextColor="#009BF0" Margin="0,10,0,0" FontSize="20" FontAttributes="Bold" VerticalOptions="Start"/>
+                    <Label Text="Sort by Added Time" TextColor="#009BF0" Margin="0,10,0,0" FontSize="20" FontAttributes="Bold" VerticalOptions="Start"/>-->
+
+                    <Label Text="Sort by Title" TextColor="#009BF0" Margin="15,10,0,0" FontSize="15" FontAttributes="Bold">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer 
+                                    Command="{Binding SortByTitleCommand}"
+                                    />
+                        </Label.GestureRecognizers>
+                    </Label>
+
+                    <Label Text="Sort by Last Read" TextColor="#009BF0" Margin="15,10,0,0" FontSize="15" FontAttributes="Bold" VerticalOptions="Start">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer 
+                                    Command="{Binding SortByLastReadCommand}"
+                                    />
+                        </Label.GestureRecognizers>
+                    </Label>
+
+                    <Label Text="Sort by Added Time" TextColor="#009BF0" Margin="15,10,0,0" FontSize="15" FontAttributes="Bold" VerticalOptions="Start">
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer 
+                                    Command="{Binding SortByAddedTimeCommand}"
+                                    />
+                        </Label.GestureRecognizers>
+                    </Label>
+
+                </StackLayout>
+
                 <RefreshView x:DataType="local:LibraryViewModel" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
                     <CollectionView 
                             ItemsSource="{Binding Library}" 
